--- a/studynet/templates/course.html
+++ b/studynet/templates/course.html
@@ -11,7 +11,7 @@
 {% block content_with_fluid %}
 <div class="row-fluid well-large">
     <div class="span9">
-        <div class="fb-like" data-send="true" data-href="<%=fb_target_link%>" data-width="540" data-show-faces="true"></div>
+        <div class="fb-like" data-send="true" data-href="{{ course.fb_target_link }}" data-width="540" data-show-faces="true"></div>
     </div>
     <div class="span3">
         <div class="btn-group">
