--- a/studynet/templates/course.html
+++ b/studynet/templates/course.html
@@ -5,7 +5,7 @@
         <meta property="og:type"   content="socialstudytw:course" /> 
         <meta property="og:url"    content="{{ course_url }}" /> 
         <meta property="og:title"  content="{{ course.course_name }}" /> 
-        <meta property="og:image"  content="https://s-static.ak.fbcdn.net/images/devsite/attachment_blank.png" /> 
+        <meta property="og:image"  content="http://socialstudy.tw/static/img/nccu_logo.png" /> 
 {% endblock %}
 
 {% block content_with_fluid %}
