--- a/studynet/templates/course.html
+++ b/studynet/templates/course.html
@@ -56,9 +56,9 @@ var postCourse = function ()
             function(response) {
                 console.log(response);
                 if (!response || response.error) {
-                    alert('Error occured');
+                    showAlert('You had performed this action on Facebook.');
                 } else {
-                    alert('Course was successful! Action ID: ' + response.id);
+                    showAlert('This information has been added to your timeline.');
                 }
             }
             );
@@ -70,4 +70,30 @@ $("#studied_btn").click(function(){
 
 
 </script>
+{% endblock %}
+
+{% block modals %}
+
+<div class="modal hide fade" id="alertModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3>Studied</h3>
+    </div>
+
+    <div class="modal-body">
+        <p id="modal-body-p"></p>
+    </div>
+    <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
+
+</div>
+
+<script type="text/javascript">
+    function showAlert(alert_s) {
+        $("#modal-body-p").html(alert_s);
+        $("#alertModal").modal();
+    }
+</script>
+
 {% endblock %}
