--- a/studynet/templates/course.html
+++ b/studynet/templates/course.html
@@ -9,7 +9,10 @@
 {% endblock %}
 
 {% block content_with_fluid %}
+<h3>{{ course.course_name }}</h3>
+<hr />
 <div class="row-fluid well-large">
+    
     <div class="span9">
         <div class="fb-like" data-send="true" data-href="{{ course.fb_target_link }}" data-width="540" data-show-faces="true"></div>
     </div>
