[fix] BigPipe-like template adjusts #2 -- remove used script tag

--- a/studynet/apps/bootstrap/templates/home/home.html
+++ b/studynet/apps/bootstrap/templates/home/home.html
@@ -108,6 +108,6 @@
 </div> <!-- page done-->
 
 <!-- For Bootstraping: notify this subpage is done.  -->
-<script type="application/javascript"> self.app.bootstrap.onArrive("home")</script>
+<script type="application/javascript" subpage="home" > self.app.bootstrap.onArrive("home")</script>
 
     {% endblock %}
