[modify] Bootstrap -- Basic pages and CSS hide.

--- a/studynet/apps/bootstrap/templates/application/initialize.html
+++ b/studynet/apps/bootstrap/templates/application/initialize.html
@@ -39,7 +39,7 @@
 
     <!-- Merged CSS -->
     <style type="text/css">
-    {{ application.css|safe }}
+    {{ application_css|safe }}
     </style>
 
     <!-- /Bootstraping -->
