--- a/studynet/apps/bootstrap/templates/home/home.html
+++ b/studynet/apps/bootstrap/templates/home/home.html
@@ -1,5 +1,5 @@
 
-<div subpage='home'>
+<div subpage='home' class="subpage active" >
     {% extends "base/base.html" %}
 
     {% block home_active %}active{% endblock %}
