[deving] Note Editor and other appearences modifications.

--- a/studynet/apps/bootstrap/static/less/application.less
+++ b/studynet/apps/bootstrap/static/less/application.less
@@ -10,4 +10,79 @@ body
     {
         display:block;
     }
+
 }
+
+// ---- home ----
+.activities
+{
+    .activity
+    {
+        background-color: white;    // default value
+        float: right;
+        position: relative;
+        left: 0px;                  // default value
+    }    
+}
+
+.home-tabs-nav
+{
+
+}
+
+.home-tabs
+{
+    padding-left:0px;
+    padding-right:0px;
+
+    .home-tab
+    {
+        border: #DDD 1px solid;
+        border-radius: 5px;
+    }
+
+    .note-editor
+    {
+        .wmd-button-row
+        {
+            display:inline-block;
+        }
+
+        .note-save-tools
+        {
+            bottom:10px;
+            border-radius: 5px;
+            border: #DDD 1px solid;
+            display:inline-block;
+            position:relative;
+
+            .btn_save
+            {
+
+            }
+
+            .dropdown
+            {
+                display:inline-block;
+            }
+
+            .course-toggle
+            {
+                color: #333;
+                &:link
+                {
+
+                }
+            }
+        }
+    }
+
+
+    .user-guide
+    {
+        background: none;
+    }
+}
+
+
+//----
