[new] prototype of activities.

--- a/studynet/apps/bootstrap/static/less/application.less
+++ b/studynet/apps/bootstrap/static/less/application.less
@@ -20,7 +20,7 @@ body
     {
         background-color: white;    // default value
         float: right;
-        position: relative;
+        position: absolute;         // or cards can't put together.
         left: 0px;                  // default value
     }    
 }
