--- a/studynet/apps/bootstrap/templates/widget/activities.html
+++ b/studynet/apps/bootstrap/templates/widget/activities.html
@@ -1,7 +1,22 @@
 
-<div class="activities container-fluid" id="activities">
-<ul class="thumbnails">
+<div id="activities">
+    <!-- Default channel -->
+    <div class="container-fluid activities active" channel="all">
+    <ul class="thumbnails">
 
-</ul>
+    </ul>
+    </div>
+
+    <div class="container-fluid activities" channel="friend">
+    <ul class="thumbnails">
+
+    </ul>
+    </div>
+
+    <div class="container-fluid activities" channel="system">
+    <ul class="thumbnails">
+
+    </ul>
+    </div>
 </div>
 </div>
