--- a/studynet/apps/bootstrap/templates/widget/note-editor.html
+++ b/studynet/apps/bootstrap/templates/widget/note-editor.html
@@ -1,5 +1,6 @@
 
-<div class="note-editor row-fluid home-tab" id="note-editor">
+<!-- Default active tab -->
+<div class="note-editor row-fluid home-tab active" id="note-editor">
         <div></div>
         <div id="wmd-button-bar" class="span12">
             <div id="wmd-save-tools" class="note-save-tools">
