--- a/studynet/apps/bootstrap/templates/widget/side-chatroom.html
+++ b/studynet/apps/bootstrap/templates/widget/side-chatroom.html
@@ -1,11 +1,48 @@
 
 <div class="side-chatroom well-small well" id="side-chatroom">
     <div class="handler"></div>
-    <div class="content">
-        <div class="head"></div>
-        <div class="body"></div>
+    <div class="content room active">
+        <div class="head">
+            <div class="menu">
+                <span class="room-name">聊天室名稱..編譯器設計設計設計</span>
+                <i class="icon-chevron-down toggle-list" title="選擇聊天室"></i>
+            </div>
+        </div>
+        <div class="body">
+            <div class="wall"> 
+            </div>
+        </div>
         <div class="footer">
-            <div class="input" contenteditable="true">Say something...</div>
+            <div class="input" contenteditable="true"><span style="color: #DDD">Say something...</span></div>
+        </div>
+    </div>
+    <div class="content list">
+        <div class="head">
+            <div class="menu">
+                <span class="room-name">回聊天畫面</span>
+                <i class="icon-chevron-up toggle-room" title="切回聊天室"></i>
+            </div>
+        </div>
+        <div class="body">
+            <table class="table table-striped rooms">
+                <tbody>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計</td></tr>
+                    <tr><td>編譯器設計編譯器設計</td></tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
