--- a/studynet/apps/bootstrap/templates/widget/side-chatroom.html
+++ b/studynet/apps/bootstrap/templates/widget/side-chatroom.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="footer">
-            <div class="input" contenteditable="true"><span style="color: #DDD">Say something...</span></div>
+            <div class="input tipon" contenteditable="true"></div>
         </div>
     </div>
     <div class="content list">
