--- a/studynet/apps/bootstrap/static/less/application.less
+++ b/studynet/apps/bootstrap/static/less/application.less
@@ -151,6 +151,7 @@ body
             .menu
             {
                 text-align: right;
+                border-bottom: 1px #CCC solid;
                 
                 .room-menu
                 {
@@ -181,18 +182,27 @@ body
                 background-color: white;
                 border: 1px #CCC solid;
                 border-radius: 2px;
-                height: 30px;
+                height: 50px;
                 position: absolute;
-                top: 400px;
+                top: 380px;
                 width: 160px;
                 .input
                 {
                     background-color: white;
                     font-size: 10pt;
+                    height: 40px;
                     margin-top: 2px;
-                    overflow: hidden;
+                    overflow-y: auto;
                     outline: none;
                     padding-left: 2px;
+
+                    &.tipon:before
+                    {
+                        content: "Say something...";
+                        color: #DDD;
+                        position: relative;
+                        left: 35px;
+                    }
                 }
             }
         }
@@ -213,6 +223,11 @@ body
                     td.active
                     {
 
+                    }
+
+                    td:first-of-type
+                    {
+                        border-top: none;
                     }
 
                     td:last-of-type
