--- a/studynet/apps/bootstrap/templates/widget/navbar.html
+++ b/studynet/apps/bootstrap/templates/widget/navbar.html
@@ -5,9 +5,9 @@
             <a class="brand" href="/">Social Study</a>
             <ul class="nav">
                 {# this is important for activate the buttons on navbar #}
-                <li class="{% block home_active %}{% endblock %}"><a href="/">Home</a></li>
-                <li class="{% block course_active %}{% endblock %}"><a href="/courses">Courses</a></li>
-                <li><a href="mailto:littleq0903+socialstudy@gmail.com">Contact Us</a></li>
+                <li class="{% block home_active %}{% endblock %}"><a href="/">首頁</a></li>
+                <li class="{% block course_active %}{% endblock %}"><a href="/courses">課程清單</a></li>
+                <li><a href="mailto:littleq0903+socialstudy@gmail.com">連繫我們</a></li>
                 <li><a href="#"></a></li>
             </ul>
 
