--- a/studynet/apps/bootstrap/templates/base/base.html
+++ b/studynet/apps/bootstrap/templates/base/base.html
@@ -35,26 +35,8 @@
     </script>
     {% endblock %}
     <!-- Navtigation Bar -->
-    <div class="navbar navbar-fixed-top navbar-inverse" >
-        <div class="navbar-inner" style="padding-left: 10px; padding-right: 10px">
-            <a class="brand" href="/">Social Study</a>
-            <ul class="nav">
-                {# this is important for activate the buttons on navbar #}
-                <li class="{% block home_active %}{% endblock %}"><a href="/">Home</a></li>
-                <li class="{% block course_active %}{% endblock %}"><a href="/courses">Courses</a></li>
-                <li><a href="mailto:littleq0903+socialstudy@gmail.com">Contact Us</a></li>
-                <li><a href="#"></a></li>
-            </ul>
 
-            <ul class="nav pull-right">
-                <li>
-                    <a class="fb-share-btn" href="#">
-                        <i class="icon-share-alt icon-white"></i> Share to Facebook
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    {%include "widget/navbar.html"%}
 
     <!-- Fluid System -->
     <div class="container-fluid" style="padding-top: 50px;">
@@ -69,22 +51,7 @@
 
     </div>
 
-    <hr />
-
-    <footer>
-        <!--
-        <div class="pull-right">
-            <a href="https://chrome.google.com/webstore/detail/lpihnfnmcibhakaadhjhdfppndhomkid">
-                <img src="{{ STATIC_URL }}img/available-on-chrome-store.png" alt="" height="50"/>
-            </a>
-        </div>
-        -->
-        <div>
-            <center>
-            <p>© LittleQ X Snowman 2012</p>
-            </center>
-        </div>
-    </footer>
+    {%include "widget/footer.html"%}
 
     {% block subpage_end %}
     {% endblock %}
