--- a/studynet/apps/bootstrap/templates/home/home.html
+++ b/studynet/apps/bootstrap/templates/home/home.html
@@ -54,11 +54,13 @@
 
         {% include "widget/course-nav.html" %}
 
+        <div class="wrapper-home"><!-- For horizon style -->
         <div class="container-fluid home-tabs" id="home-tabs"> 
 
             {%include "widget/note-editor.html"%}
             {%include "widget/user-guide.html"%}
 
+        </div>
         </div>
     </div> <!-- main area -->
 
