--- a/studynet/apps/bootstrap/templates/widget/side-chatroom.html
+++ b/studynet/apps/bootstrap/templates/widget/side-chatroom.html
@@ -1,5 +1,5 @@
 
-<div class="side-chatroom well-small well" id="side-chatroom">
+<div class="side-chatroom " id="side-chatroom">
     <div class="handler"></div>
     <div class="content room active">
         <div class="head">
