Fix submodule removing issues

--- a/studynet/apps/bootstrap/templates/application/initialize.html
+++ b/studynet/apps/bootstrap/templates/application/initialize.html
@@ -43,9 +43,9 @@
     <script src="{{ STATIC_URL }}js/lib/pagedown/Markdown.Editor.js"></script>
 
 
-    <script type='application/javascript' src="{{ STATIC_URL }}js/lib/fluorine/build/fluorine/notifier.js"></script>
-    <script type='application/javascript' src="{{ STATIC_URL }}js/lib/fluorine/build/fluorine/process.js"></script>
-    <script type='application/javascript' src="{{ STATIC_URL }}js/lib/fluorine/build/fluorine/context.js"></script>
+    <script type='application/javascript' src="{{ STATIC_URL }}js/lib/Fluorine/notifier.js"></script>
+    <script type='application/javascript' src="{{ STATIC_URL }}js/lib/Fluorine/process.js"></script>
+    <script type='application/javascript' src="{{ STATIC_URL }}js/lib/Fluorine/context.js"></script>
 
     <script type='application/javascript' src="{{ STATIC_URL }}js/lib/main/settings.js"></script>
     <script type='application/javascript' src="{{ STATIC_URL }}js/lib/main/bootstrap.js"></script>
