--- a/studynet/apps/bootstrap/templates/application/initialize.html
+++ b/studynet/apps/bootstrap/templates/application/initialize.html
@@ -31,8 +31,10 @@
 
     <!-- twitter-bootstrap -->
     <script src="{{ STATIC_URL }}js/lib/jquery/jquery-min.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
     <script src="{{ STATIC_URL }}js/lib/underscore/underscore-min.js"></script>
     <script src="{{ STATIC_URL }}js/lib/twitter-bootstrap/twitter-bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
 
     <script src="{{ STATIC_URL }}js/lib/less/less.min.js"></script>
 
